# Currency_Exchange

./: .env.example  .env.test  .gitignore  MANIFEST.in  README.md  README.ru.md  app_server.py  controller.py  currency.db  deploy.sh  deploy_with_test.sh  deploy_with_tests.sh  dto.py  errors.py  index.html  init_db.py  main.py  model.py  pyproject.toml  requirements.txt  router.py  sign_code.py  temp.db  test_model.py  uv.yaml  view.py  viewer.py
db/: currency.db
script/: build.sh  start.sh  start_backgroun.sh  start_background.sh  test.sh
src/: app_server.py  config.py  controller.py  db_initializer.py  errors.py  main.py  router.py
src/app/: app_server.py  config.py  controller.py  db_initializer.py  dto.py  errors.py  main.py  router.py  sign_code.py
src/app/model/: __init__.py  base.py  conversion.py  currencies.py  exchange_rates.py  model_temp.py
src/model/: __init__.py  base.py  conversion.py  currencies.py  exchange_rates.py  model_temp.py
src/templates/: index.html
templates/: index.html
tests/: test_env.py  test_model.py  test_router.py
