[project]
name = "CURRENCY_EXCHANGE"
version = "0.1.0"
description = "Currency exchange rate application"

authors = [
    { name = "Dmitry", email = "dimkin3@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "dotenv>=0.9.9",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest-dotenv>=0.5.2",
    "ruff>=0.11.7",
    "pytest>=8.3.5",
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
lint = "ruff check ."  # Проверка кода
format = "ruff format ."  # Форматирование кода
start = "python src/app/main.py"  # Запуск приложения
test = {cmd = "pytest -v --tb=short", env-file = '.env'}  # Запуск тестов
init-db = "python src/app/db_initializer.py"  # Инициализация базы данных

[tool.ruff]
# Что проверяем
[tool.ruff.lint]
# 1. Selectively enable specific rules.
#    - `E4` (import violations)
#    - `E7` (line length violations)
#    - `E9` (syntax errors)
#    - `F` (function violations)
#    - `B` (bugbear violations)
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501", "B904"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"
